fix overflowing tables

--- a/style.css
+++ b/style.css
@@ -16,6 +16,13 @@ body, body * {
     background-image: linear-gradient(DeepSkyBlue, white 60%);
 }
 
+html, body, #container, .slides {
+    max-width: 100vw;
+    width: 100vw;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
 .slides {
     width: 100%;
     height: 100vh;
